css fix to Y scrollbar on side by side diff

--- a/css/diff2html.css
+++ b/css/diff2html.css
@@ -81,6 +81,7 @@
 .d2h-file-side-diff {
     display: inline-block;
     overflow-x: scroll;
+    overflow-y: hidden;
     width: 50%;
     margin-right: -4px;
 }
